# camfinder

./: CMakeLists.txt  face.cpp  face.hpp  main.cpp
